--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,6 +11,9 @@
   </ion-header>
   <ion-content>
     <ion-list>
+      <ion-item (click)="navegarA('/PagInicio')">
+        <ion-label>Pagina de Inicio</ion-label>
+      </ion-item>
       <ion-item (click)="navegarA('/propiedades')">
         <ion-label>Propiedades</ion-label>
       </ion-item>
